changed onion folders and how they are created